reference/tests/snapshots/snapshot__run_reference_examples@derive-0.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms/derive-0.prql
---
SELECT
  employees.*,
  salary + payroll_tax AS gross_salary
FROM
  employees
