reference/tests/snapshots/snapshot__run_reference_examples@derive-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms/derive-1.prql
---
SELECT
  employees.*,
  salary + payroll_tax AS gross_salary,
  salary + payroll_tax + benefits_cost AS gross_cost
FROM
  employees
