reference/tests/snapshots/snapshot__run_reference_examples@derive-2.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms/derive-2.prql
---
SELECT
  5 AS x
