reference/tests/snapshots/snapshot__run_reference_examples@filter-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms/filter-1.prql
---
SELECT
  employees.*
FROM
  employees
WHERE
  age BETWEEN 25
  AND 40
