reference/tests/snapshots/snapshot__run_reference_examples@group-1.prql.snap
---
source: reference/tests/snapshot.rs
expression: sql
input_file: reference/tests/examples/transforms/group-1.prql
---
SELECT
  employees.*
FROM
  employees
ORDER BY
  join_date
LIMIT
  1
